--- a/src/SipMessageCpp/CMakeLists.txt
+++ b/src/SipMessageCpp/CMakeLists.txt
@@ -7,11 +7,13 @@ SET(SIP_BASE_MSG_FILE ./include/SipMessageBase.cpp
 ./include/SipInviteMsg.cpp
 ./include/SipAckMsg.cpp
 ./include/SipByeMsg.cpp
+./include/SipProxyAuthorziathinRequireMsg.cpp
 ./include/SipMessageUtil.cpp)
 SET(SIP_MSG_TEST_FILE 
 ./tests/SipMessageBase_test.cpp 
 ./tests/SipRegisterMsg_test.cpp
 ./tests/SipInviteMsg_test.cpp
 ./tests/SipAckMsg_test.cpp
-./tests/SipByeMsg_test.cpp)
+./tests/SipByeMsg_test.cpp
+./tests/SipProxyAuthorziathinRequireMsg_test.cpp)
 add_executable(sip_message_cpp_test ./tests/main.cpp  ${SIP_MSG_TEST_FILE} ${SIP_BASE_MSG_FILE})
