--- a/src/SipMessageCpp/sample/CMakeLists.txt
+++ b/src/SipMessageCpp/sample/CMakeLists.txt
@@ -10,5 +10,6 @@ SET(SIP_BASE_MSG_FILE ../include/SipMessageBase.cpp
 ../include/SipRingMsg.cpp
 ../include/SipOkMsg.cpp
 ../include/SipMessageUtil.cpp
-../include/SipSessionProgressMsg.cpp)
+../include/SipSessionProgressMsg.cpp
+../include/CSipRegisterServerRsp.cpp)
 add_executable(SipMsgSample ./sip_msg_demo.cpp ${SIP_BASE_MSG_FILE})
