--- a/src/SipMessageCpp/sample/CMakeLists.txt
+++ b/src/SipMessageCpp/sample/CMakeLists.txt
@@ -15,4 +15,5 @@ SET(SIP_BASE_MSG_FILE ../include/SipMessageBase.cpp
 ../include/CSipRegisterServerRsp.cpp
 ../include/SipMsgBaseStruct.cpp)
 SET(MD5_SOURCE_FILE ../thirdparty/md5/md5.cpp)
-add_executable(SipMsgSample ./sip_msg_demo.cpp ${SIP_BASE_MSG_FILE} ${MD5_SOURCE_FILE})
+SET(SIP_CLIENT_SOURCE_FILE ./sip_client_protocal_handler.cpp ./sip_client.cpp)
+add_executable(SipMsgSample ./sip_msg_demo.cpp ${SIP_BASE_MSG_FILE} ${MD5_SOURCE_FILE} ${SIP_CLIENT_SOURCE_FILE}) 
