--- a/src/SipMessageCpp/tests/CMakeLists.txt
+++ b/src/SipMessageCpp/tests/CMakeLists.txt
@@ -15,7 +15,8 @@ SET(SIP_BASE_MSG_FILE ../include/SipMessageBase.cpp
 ../include/SipSessionProgressMsg.cpp
 ../include/CSipRegisterServerRsp.cpp
 ../include/SipMsgBaseStruct.cpp
-../include/SipSmsMessage.cpp)
+../include/SipSmsMessage.cpp
+../include/SipServerRspBase.cpp)
 SET(SIP_MSG_TEST_FILE 
 ./SipMessageBase_test.cpp 
 ./SipRegisterMsg_test.cpp
