create a base class for sip client req

--- a/src/SipMessageCpp/sample/CMakeLists.txt
+++ b/src/SipMessageCpp/sample/CMakeLists.txt
@@ -16,7 +16,8 @@ SET(SIP_BASE_MSG_FILE ../include/SipMessageBase.cpp
 ../include/CSipRegisterServerRsp.cpp
 ../include/SipMsgBaseStruct.cpp
 ../include/SipSmsMessage.cpp
-../include/SipServerRspBase.cpp)
+../include/SipServerRspBase.cpp
+../include/SipMsgClientReqBase.cpp)
 SET(MD5_SOURCE_FILE ../thirdparty/md5/md5.cpp)
 SET(SIP_CLIENT_SOURCE_FILE ./sip_client_protocal_handler.cpp ./sip_client.cpp ./sip_proto_util.cpp)
 add_executable(SipMsgSample ./sip_phone_demo.cpp ${SIP_BASE_MSG_FILE} ${MD5_SOURCE_FILE} ${SIP_CLIENT_SOURCE_FILE}) 
